--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,21 @@
-<h1>Entrar</h1>
+<div>
+    <div class="container">
+        <div class="col-lg-8 form">
+            <h3>{{title}}</h3>
+            <form #loginForm="ngForm" (ngSubmit)="login(loginrForm)">
+                    <div class="form-group col-lg-8">
+                        <label>Correo electrónico:</label>
+                        <input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" aria-describedby="emailHelp" placeholder="Correo Electrónico" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                    </div>
+                    <div class="form-group col-lg-8">
+                        <label>Contraseña:</label>
+                        <div class="input-group mb-2">
+                            <input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control" aria-describedby="passwordHelp" placeholder="Contraseña" pattern="(?=^.{8,16}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
+                        </div>
+                        <!-- <small class="form-text text-muted" *ngIf="!password.valid && password.touched">Tus datos estarán seguros.</small> -->
+                    </div>
+                <input type="submit" value="Entrar" class="btn btn-success btn-form btn-lg btn-block" [disabled]="!loginForm.form.valid"/>
+            </form>
+        </div>
+    </div>
+</div>
