Updated Home, Login and Register view

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<register></register>
+<div class="row">
+    <div class="col-lg-6">
+        <img style="width: 100%" src="../../../assets/img/undraw_investment_xv9d.png" alt="undraw_investment_xv9d">
+    </div>
+    <div class="col-lg-6">
+        <register></register>
+    </div>
+</div>
