--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,44 +1,43 @@
-<div>
-    <div class="container">
-        <div class="col-lg-8 form">
-            <h3>{{title}}</h3>
-            <form #registerForm="ngForm" (ngSubmit)="register(registerForm)">
-                    <div class="form-group col-lg-6">
-                        <label>Ingresa tu(s) nombre(s):</label>
-                        <input type="text" name="name" #name="ngModel" [(ngModel)]="user.name" class="form-control" aria-describedby="firstNameHelp" placeholder="Nombre(s)" pattern=".{5,}" required>
-                        <small class="form-text text-muted" *ngIf="!name.valid && name.touched">Necesitamos conocer tu nombre.</small>
-                        <!-- <button type="button" class="btn btn-dark"><i class="fas fa-arrow-right"></i></button> -->
-                    </div>
-                    <div class="form-group col-lg-6">
-                        <label>Ingresa tus apellidos:</label>
-                        <input type="text" name="surname" #surname="ngModel" [(ngModel)]="user.surname" class="form-control" aria-describedby="lastNameHelp" placeholder="Apellido(s)" pattern=".{5,}" required>
-                        <small class="form-text text-muted" *ngIf="!surname.valid && surname.touched">Necesitamos conocer tus apellidos.</small>
-                    </div>
-                    <div class="form-group col-lg-8">
-                        <label>Correo electrónico:</label>
-                        <input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" aria-describedby="emailHelp" placeholder="Correo Electrónico" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
-                        <small class="form-text text-muted" *ngIf="!email.valid && email.touched">Nunca compartiremos tu correo electrónico con nadie más.</small>
-                    </div>
-                    <div class="form-group col-lg-4">
-                        <label>Teléfono celular:</label>
-                        <div class="input-group mb-2">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text">+52</div>
-                            </div>
-                            <input type="tel" name="phone_number" #phone_number="ngModel" [(ngModel)]="user.phone_number" class="form-control" aria-describedby="phoneNumberHelp" placeholder="Teléfono" pattern="[0-9]{10,10}$" required>
-                        </div>
-                        <small class="form-text text-muted" *ngIf="!phone_number.valid && phone_number.touched">Escribe tu número telefónico con lada.</small>
-                    </div>
+<div class="component">
+    <div class="col-lg-10 form">
+        <h4>{{title}}</h4>
+        <form #registerForm="ngForm" (ngSubmit)="register(registerForm)">
                 <div class="form-group col-lg-8">
-                    <label>Contraseña:</label>
-                    <div class="input-group mb-2">
-                        <input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control" aria-describedby="passwordHelp" placeholder="Contraseña" pattern="(?=^.{8,16}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
-                    </div>
-                    <small class="form-text text-muted" *ngIf="!password.valid">Procura que tu constraseña sea única, tenga de 8-16 carácteres, al menos una letra mayúscula, al menos una minúscula, números y/o carácteres especiales.</small>
-                    <!-- <small class="form-text text-muted" *ngIf="!password.valid && password.touched">Tus datos estarán seguros.</small> -->
+                    <label>Ingresa tu(s) nombre(s):</label>
+                    <input type="text" name="name" #name="ngModel" [(ngModel)]="user.name" class="form-control" aria-describedby="firstNameHelp" placeholder="Nombre(s)" pattern=".{5,}" required>
+                    <small class="form-text text-muted" *ngIf="!name.valid && name.touched">Necesitamos conocer tu nombre.</small>
+                    <!-- <button type="button" class="btn btn-dark"><i class="fas fa-arrow-right"></i></button> -->
                 </div>
-                <input type="submit" value="Registrarme" class="btn btn-success btn-form btn-lg btn-block" [disabled]="!registerForm.form.valid"/>
-            </form>
-        </div>
+                <div class="form-group col-lg-8">
+                    <label>Ingresa tus apellidos:</label>
+                    <input type="text" name="surname" #surname="ngModel" [(ngModel)]="user.surname" class="form-control" aria-describedby="lastNameHelp" placeholder="Apellido(s)" pattern=".{5,}" required>
+                    <small class="form-text text-muted" *ngIf="!surname.valid && surname.touched">Necesitamos conocer tus apellidos.</small>
+                </div>
+                <div class="form-group col-lg-8">
+                    <label>Correo electrónico:</label>
+                    <input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" aria-describedby="emailHelp" placeholder="Correo Electrónico" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                    <small class="form-text text-muted" *ngIf="!email.valid && email.touched">Nunca compartiremos tu correo electrónico con nadie más.</small>
+                </div>
+                <div class="form-group col-lg-6">
+                    <label>Teléfono celular:</label>
+                    <div class="input-group mb-2">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">+52</div>
+                        </div>
+                        <input type="tel" name="phone_number" #phone_number="ngModel" [(ngModel)]="user.phone_number" class="form-control" aria-describedby="phoneNumberHelp" placeholder="Teléfono" pattern="[0-9]{10,10}$" required>
+                    </div>
+                    <small class="form-text text-muted" *ngIf="!phone_number.valid && phone_number.touched">Escribe tu número telefónico con lada.</small>
+                </div>
+            <div class="form-group col-lg-8">
+                <label>Contraseña:</label>
+                <div class="input-group mb-2">
+                    <input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control" aria-describedby="passwordHelp" placeholder="Contraseña" pattern="(?=^.{8,16}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required>
+                </div>
+                <small class="form-text text-muted" *ngIf="!password.valid">Procura que tu constraseña sea única, tenga de 8-16 carácteres, al menos una letra mayúscula, al menos una minúscula, números y/o carácteres especiales.</small>
+                <!-- <small class="form-text text-muted" *ngIf="!password.valid && password.touched">Tus datos estarán seguros.</small> -->
+            </div>
+            <small>¿Ya tienes una cuenta? Ingresa <a [routerLink]="['/login']">aquí</a></small>
+            <input type="submit" value="Registrarme" class="btn btn-success btn-form btn-lg btn-block" [disabled]="!registerForm.form.valid"/>
+        </form>
     </div>
 </div>
