Updated Users view and component

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -17,3 +17,16 @@ body{
 .img img{
     width: 79%;
 }
+
+.card {
+    margin: 30px;
+}
+
+.title{
+    margin: 50px;
+}
+
+.pages{
+    width: 30%;
+    margin: auto;
+}
