--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -5,8 +5,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active" *ngIf="identity">
-        <a class="nav-link" [routerLink]="['/usuarios']">Usuarios <span class="sr-only">(current)</span></a>
+      <li class="nav-item" *ngIf="identity">
+        <a class="nav-link" [routerLink]="['/usuarios']">Usuarios</a>
       </li>
       <li class="nav-item" *ngIf="identity">
         <a class="nav-link" [routerLink]="['/tarjetas']">Tarjetas</a>
