--- a/src/app/components/credit-cards/credit-cards.component.html
+++ b/src/app/components/credit-cards/credit-cards.component.html
@@ -1,6 +1,9 @@
 <div class="container">
     <div class="title">
-        <h4>{{title}}</h4>
+        <h4 style="display:inline; margin-right: 300px">{{title}}</h4>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+            <i class="fas fa-plus"></i>
+        </button>
         <hr>
         <small>Total de tarjetas: {{total}}</small>
     </div>
@@ -22,7 +25,7 @@
                         <small>Teléfono:</small> {{ card.user[0].phone_number }}
                     </p>
                     <p>
-                        <small>Tarjeta:</small> {{ card.credit_card_number }}
+                        <i class="fas fa-money-check-alt"></i>: {{ card.credit_card_number }}
                     </p>
                 </div>
             </div>
@@ -34,4 +37,19 @@
 			<li class="page-item" *ngIf="page < pages"> <a class="page-link" [routerLink]="['/usuarios', next_page]">Siguiente</a></li>
 		</ul>
     </nav>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Añadir una nueva tarjeta</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <add-credit-card></add-credit-card>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
